修改限制近邻数目的实现方法